# GPUEngine-Effects

./: .gitignore  CMakeLists.txt  EffectsConfig.cmake  README.md
include/Effects/: Effects_export.h  VisualizationTechnique.h
include/Effects/geometry/: Line.h  Sphere.h  SphereFactory.h
include/Effects/laser/: Laser.h  LaserVT.h
include/Effects/shield/: Intersection.h  PulseWave.h  Shield.h  ShieldVT.h
src/: CMakeLists.txt  VisualizationTechnique.h
src/geometry/: Line.cpp  Line.h  Sphere.cpp  Sphere.h  SphereFactory.h
src/laser/: Laser.cpp  Laser.h  LaserVT.cpp  LaserVT.h
src/shield/: CMakeLists.txt  Intersection.h  PulseWave.h  Shield.cpp  Shield.h  ShieldVT.cpp  ShieldVT.h
