CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(Effects LANGUAGES CXX VERSION 0.0.0.1)

INCLUDE(GNUInstallDirs)
INCLUDE(GenerateExportHeader)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR}")

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_DEBUG_POSTFIX "d"           CACHE STRING "add a postfix, usually d on windows")
SET(CMAKE_RELEASE_POSTFIX ""          CACHE STRING "add a postfix, usually empty on windows")
SET(CMAKE_RELWITHDEBINFO_POSTFIX "rd" CACHE STRING "add a postfix, usually empty on windows")
SET(CMAKE_MINSIZEREL_POSTFIX "s"      CACHE STRING "add a postfix, usually empty on windows")

# SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_EXTENSIONS OFF)

OPTION(BUILD_SHARED_LIBS "Build libraries as shared or static" ON)

if(NOT CMAKE_CONFIGURATION_TYPES AND NOT CMAKE_BUILD_TYPE)
   SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY VALUE "Release")
endif()



add_subdirectory(src)
